# Mailing_Django_CW

./: README.md  pyproject.toml
users/templates/users/: register.html
