[tool.poetry]
name = "django-basics"
version = "0.1.0"
description = "Django course work"
authors = ["Dmitry Frost <dmitfrost@ya.ru>"]
readme = "README.md"
packages = [{include = "django_basics"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
django = "^4.2.3"
django-crontab = "^0.7.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
pillow = "^10.0.0"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
